various updates from ADO source repo

--- a/comps/index.html
+++ b/comps/index.html
@@ -44,9 +44,9 @@
 							<div class="nav-path-text">Complaint</div>
 						</div>
 
-						<div tabindex="0" class="nav-path" v-bind:class="{ 'nav-path-selected': page === 'report' }" @click="UpdatePage('report')" @keypress.enter="UpdatePage('report')" @keypress.space="UpdatePage('report')">
+						<div tabindex="0" class="nav-path" v-bind:class="{ 'nav-path-selected': page === 'logs' }" @click="UpdatePage('logs')" @keypress.enter="UpdatePage('logs')" @keypress.space="UpdatePage('logs')">
 							<div class="nav-path-icon"><?xml version="1.0" encoding="UTF-8" standalone="no"?><svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" id="svg10" version="1.1" class="feather feather-users" stroke-linejoin="round" stroke-linecap="round" stroke-width="2" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="24" width="24"><metadata id="metadata16"><rdf:RDF><cc:Work rdf:about=""><dc:format>image/svg+xml</dc:format><dc:type rdf:resource="http://purl.org/dc/dcmitype/StillImage" /><dc:title></dc:title></cc:Work></rdf:RDF></metadata><defs id="defs14" /><path style="stroke-width:1.57754219" id="path2" d="M 14.442827,19.796179 V 17.785146 A 2.4749856,4.0220668 0 0 0 11.967842,13.763079 H 7.0178713 a 2.4749856,4.0220668 0 0 0 -2.4749857,4.022067 v 2.011033" /><ellipse style="stroke-width:1.74542952" ry="3.4154208" rx="3.5679631" id="circle4" cy="7.9152541" cx="9.5593224" /><path style="stroke-width:1.65644431" id="path6" d="M 19.170861,18.382269 V 16.685137 A 3.2334636,3.3942644 0 0 0 16.745763,13.401186" /><path style="stroke-width:1.492764" id="path8" d="m 15.539941,5.2145444 a 3.1913378,2.7929907 0 0 1 0,5.4114186" /></svg></div>
-							<div class="nav-path-text">Report</div>
+							<div class="nav-path-text">Logs</div>
 						</div>
 					</div>
 				</div>
@@ -56,6 +56,12 @@
 		<main id="app-content" class="container-fluid">
 			<div id="app-page-loading" class="container-fluid p-0" v-show="page === null">
 				<small>Loading...</small>
+			</div>
+
+			<div v-cloak class="app-page-modal" v-bind:class="{'app-page-modal-show': modal}">
+				<div class="modal-container">
+					<div class="modal-close" @click="modal = false"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg></div>
+				</div>
 			</div>
 
 			<div v-cloak id="app-page-login" class="container-fluid p-0" v-show="page === 'login'">
@@ -69,11 +75,13 @@
 											<div class="form-email col-md-12 col-sm-8 col-12">
 												<label for="login-form-email" class="login-input-label">Email</label>
 												<input id="login-form-email" class="login-input" name="login-form-email" type="email">
+												<div class="login-form-input-help">* Email input has a problem</div>
 											</div>
 
 											<div class="form-pass col-md-12 col-sm-8 col-12 mt-4">
 												<label for="login-form-password" class="login-input-label">Password</label>
 												<input id="login-form-password" class="login-input" name="login-form-password" type="password">
+												<div class="login-form-input-help">* Password input has a problem</div>
 											</div>
 										</div>
 
@@ -82,7 +90,7 @@
 												<span v-show="!loadingLogin">Log In</span>
 												<span v-show="loadingLogin">Loading</span>
 												<span class="login-form-submit-loading" v-show="loadingLogin">
-													<svg width="36px"  height="36px"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" class="lds-rolling" style="background: none;"><circle cx="50" cy="50" fill="none" ng-attr-stroke-width="{{config.width}}" ng-attr-r="{{config.radius}}" ng-attr-stroke-dasharray="{{config.dasharray}}" stroke-width="14" r="42" stroke-dasharray="197.92033717615698 67.97344572538566" transform="rotate(137.894 50 50)"><animateTransform attributeName="transform" type="rotate" calcMode="linear" values="0 50 50;360 50 50" keyTimes="0;1" dur="1s" begin="0s" repeatCount="indefinite"></animateTransform></circle></svg>
+													<svg width="36px" height="36px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" class="lds-rolling" style="background: none;"><circle cx="50" cy="50" fill="none" ng-attr-stroke-width="{{config.width}}" ng-attr-r="{{config.radius}}" ng-attr-stroke-dasharray="{{config.dasharray}}" stroke-width="14" r="42" stroke-dasharray="197.92033717615698 67.97344572538566" transform="rotate(137.894 50 50)"><animateTransform attributeName="transform" type="rotate" calcMode="linear" values="0 50 50;360 50 50" keyTimes="0;1" dur="1s" begin="0s" repeatCount="indefinite"></animateTransform></circle></svg>
 												</span>
 											</button>
 										</div>
@@ -149,18 +157,22 @@
 					<label for="testInput3">Description
 						<input type="text" id="testInput3">
 					</label>
+					<br>
+					<button type="button" class="btn-main">Submit</button>
 				</form>
 			</div>
 
-			<div v-cloak id="app-page-report" class="container-fluid p-0" v-show="page === 'report'">
-				<div class="row">
-					<div class="report-controls">
-						<button class="btn-main">print report</button>
+			<div v-cloak id="app-page-logs" class="container-fluid p-0" v-show="page === 'logs'">
+				<div class="logs-table-container row justify-content-center mt-3">
+					<div class="col-12 text-right mb-3">
+						<div class="logs-controls">
+							<button class="btn-main" @click="modal = true">Print Logs</button> <!-- if there is not a filter -->
+							<button class="btn-main" @click="modal = true" hidden>Print Logs From Filter</button> <!-- if there is a filter -->
+							<button class="btn-main" @click="modal = true">Print Predefined Reports</button>
+						</div>
 					</div>
-				</div>
 
-				<div class="row justify-content-center mt-3">
-					<table class="report-table">
+					<table class="logs-table col-12">
 						<thead class="table-head text-center">
 							<tr class="table-row">
 								<th>ID</th>
@@ -176,7 +188,7 @@
 						</thead>
 	
 						<tbody class="table-body">
-							<tr tabindex="0" class="table-row" v-for="(complaint, index) in complaints" v-show="index - reportTablePage < 19 && index + 1 >= reportTablePage">
+							<tr tabindex="0" class="table-row" v-for="(complaint, index) in complaints" v-show="index - logsTablePage < 19 && index + 1 >= logsTablePage">
 								<td class="row-id text-center">{{complaint.id}}</td>
 								<!-- <td class="row-status text-center">
 									<div class="status-marker" v-bind:class="{'status-marker-active': complaint.status === 'active', 'status-marker-inactive': complaint.status === 'inactive'}">
@@ -206,8 +218,11 @@
 				</div>
 
 				<div class="row justify-content-center mt-3">
-					<button class="btn-main" @click="reportTablePage != 1 ? reportTablePage -= 20 : null">prev</button>
-					<button class="btn-main" @click="reportTablePage <= (complaints.length - 20) ? reportTablePage += 20 : null">next</button>
+					<!-- <button class="btn-main mr-2" @click="logsTablePage != 1 ? logsTablePage -= 20 : null">Prev</button>
+					<button class="btn-main ml-2" @click="logsTablePage <= (complaints.length - 20) ? logsTablePage += 20 : null">Next</button> -->
+
+					<button class="btn-main mr-2" v-show="logsTablePage != 1" @click="logsTablePage -= 20">Prev</button>
+					<button class="btn-main ml-2" v-show="logsTablePage <= (complaints.length - 20)" @click="logsTablePage += 20">Next</button>
 				</div>
 			</div>
 		</main>
